Database query working, listing items in recycler view

--- a/app/src/main/res/layout/room_item.xml
+++ b/app/src/main/res/layout/room_item.xml
@@ -11,7 +11,7 @@
 
     <TextView
         android:id="@+id/rmItmName"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:text="loading"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,7 +24,7 @@
 
     <TextView
         android:id="@+id/rmOwner"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:text="loading"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,7 +35,7 @@
 
     <TextView
         android:id="@+id/rmNoPlayers"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:text="loading"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -47,7 +47,7 @@
 
     <TextView
         android:id="@+id/rmPlayers"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:text="loading"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,7 +59,7 @@
 
     <TextView
         android:id="@+id/rmStatus"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:text="loading"
         app:layout_constraintBottom_toBottomOf="parent"
