--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -51,7 +51,7 @@
         android:id="@+id/gmGiveUpBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/guess"
+        android:text="@string/give_up"
         />
 
 </LinearLayout>
