--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -53,5 +53,9 @@
         android:layout_height="wrap_content"
         android:text="@string/give_up"
         />
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/gmGuessRecyc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 </LinearLayout>
